test/TestPhases/typechecker/invalid/nonBoolCond.blc
module

activity empty ()()
    var x: int8 = 9
    if 7 then
      x = x + 1
    end
    await true
    
end
